
[v1.1.1p7a]
 - Bugfix: OverpaintablePanel now correctly implements getMinimum/Preferred/MaximumSize.
 - Bugfix: RootMenuPiece unbinds itself now with some delay, allowing the attached ActionListeners to complete their work
 - API: The minimum size for Dockables on a SplitDockStation has been redesigned. Only the minimum size of Components has a real influence now, tabs and titles are most times ignored.

[v1.1.1p7b]
 ! API: All DockStation can now draw some indicators when a dockable is dragged from them. Only BasicDockTheme and FlatDockTheme do actually draw these markings, BubbleDockTheme and EclipseDockTheme completely ignore them.
 - API: The new "span" mechanism allows animations when dropping a Dockable.
 - API: An empty FlapDockStation now has a preferred size of 0/0, but when the mouse is near the station its preferred size increases
 ! API: DockStation.prepareDrop and associated methods receive now a StationDropItem instead of several parameters. This allows to forward more information to these methods, and will be more backwards compatible for future changes.
 - API: Making a SplitDockStation very small, such that dividers become invalid, no longer changes the valud of dividers forever.
 - API: SplitDockStation now suppors "Span" as well.
 - Bugfix: When multiple listeners are receiving Key- and DoubleClick-Events, the the listeners further down the tree are invoked first.
 - API: New FocusHistory keeps track of the order of focused Dockables, can be accessed through DockController.getFocusHistory
 - API: CControl will transfer the focus from minimized Dockables to not minimized Dockables
 - API: CWorkingArea offers the new method "show" which show a Dockable at the "optimal spot"

[v1.1.1p7c]
 - Bugfix: Focus transfer on minimization is now forced, this prevents focus stealing when minimizing a non-focused Dockable.
   
[Todo]
- Drop StackDockStation over Dockable and merge them